--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-</head>
-<body>
-    <h1>Website Heading</h1>
-    <p>Website Paragraph</p>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta description="Saint Lucy, a light to guide you home.">
+        <title>Saint Lucy</title>
+    </head>
+
+    <body>
+        <!-- While the header, main, and footer tags are only semantic, they aid greatly in readability. -->
+        <header>
+            <!-- It appears that webp is the most optimized image format for websites. -->
+            <!-- It is a good idea to create seperate folders for images as the site scales. -->
+            <img src="/images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles." width="200px">
+            <h1>Saint Lucy</h1>
+        </header>
+        <main>
+            <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13">December 13.</a></p>
+            <p>She is the patroness of many places including:</p>
+            <ul>
+                <li>Syracuse, Italy</li>
+                <li>Perugia, Italy</li>
+                <li>Mtarfa, Malta</li>
+                <li>Sasmuan, Phillipines</li>
+            </ul>
+        </main>
+        <footer>
+            <!-- The character entity, "&copy;", is a copyright symbol. -->
+            &copy; Finnian Lucy 2025
+        </footer>
+    </body>
+
 </html>
