--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <!-- It appears that webp is the most optimized image format for websites. -->
             <!-- It is a good idea to create seperate folders for images as the site scales. -->
-            <img src="/images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles." width="200px">
+            <img src="./images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles." width="200px">
             <h1>Saint Lucy</h1>
         </header>
         <main>
