Module 4 - Create Your Own Website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta description="Saint Lucy, a light to guide you home.">
+        <link rel="stylesheet" href="./styles.css">
         <title>Saint Lucy</title>
     </head>
 
@@ -13,8 +14,8 @@
         <header>
             <!-- It appears that webp is the most optimized image format for websites. -->
             <!-- It is a good idea to create seperate folders for images as the site scales. -->
-            <img src="./images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles." width="200px">
-            <h1>Saint Lucy</h1>
+            <img src="./images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles.">
+            <h1 id="titleMain">Saint Lucy</h1>
         </header>
         <main>
             <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13">December 13.</a></p>
@@ -26,7 +27,7 @@
                 <li>Sasmuan, Phillipines</li>
             </ul>
         </main>
-        <footer>
+        <footer class="titleFoot">
             <!-- The character entity, "&copy;", is a copyright symbol. -->
             &copy; Finnian Lucy 2025
         </footer>
