Module 5 Assignment: Create Your Own Website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <!-- It appears that webp is the most optimized image format for websites. -->
             <!-- It is a good idea to create seperate folders for images as the site scales. -->
             <img src="./images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles.">
-            <h1 id="titleMain">Saint Lucy</h1>
+            <h1 id="titleMain">SAINT LUCY</h1>
+            <br>
+            <a href="index.html">HOME</a>
+            <a href="html/golden-legend.html">GOLDEN LEGEND</a>
         </header>
         <main>
             <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13">December 13.</a></p>
