--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <a href="html/golden-legend.html">GOLDEN LEGEND</a>
         </header>
         <main>
-            <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13">December 13.</a></p>
+            <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13" target="_blank">December 13.</a></p>
             <p>She is the patroness of many places including:</p>
-            <ul>
+            <ul class="eye">
                 <li>Syracuse, Italy</li>
                 <li>Perugia, Italy</li>
                 <li>Mtarfa, Malta</li>
