Module 6 - Create Your Own Website

--- a/html/golden-legend.html
+++ b/html/golden-legend.html
@@ -7,18 +7,128 @@
     <meta description="Golden Legend">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../css/golden-legend.css">
-    <title>Golden Legend</title>
+    <title>GOLDEN LEGEND</title>
 </head>
+
+<nav id="nav_menu">
+    <ul>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="golden-legend.html">GOLDEN LEGEND</a></li>
+        <li><a href="sacred-tradition.html">SACRED TRADITION</a></li>
+    </ul>
+</nav>
 
 <body>
     <header>
         <h1 id="titleMain">GOLDEN LEGEND</h1>
-        <a href="../index.html">HOME</a>
-        <a href="golden-legend.html">GOLDEN LEGEND</a>
     </header>
     <main>
         <section id="goldenLegend">
             <img src="../images/golden-legend.webp" alt="Saint Lucy on trial for her Catholic faith.">
+            <h1>St. Lucy's Mother is Cured of the Flux</h1>
+            <p>
+                St. Lucy, the holy virgin, was born in Sicily, and extract and engendered of a noble lineage, in the city
+                of Syracuse. When she heard of the good fame and renown of St. Agatha or Agaas, which was published and
+                spread all about, anon she went to her sepulchre with her mother which was named Euthicia, which had a
+                malady, named the bloody flux, by the space of four years, the which no master in physic ne surgery
+                could heal.
+
+                And when they were at a mass, one read a gospel which made mention of a woman which was healed of the
+                bloody flux by touching of the hem of the coat of Jesu Christ. When St. Lucy heard this, anon she said
+                to her mother: Mother, if ye believe that this which is read be true, and also that St. Agatha hath now
+                presently with her Jesu Christ, and also that for his name she suffered martyrdom, and if ye, with this
+                belief, touch her sepulchre, without doubt ye shall be anon guerished and healed.
+
+                Upon this they, after the mass, when the people were departed, they twain fell down on their knees on
+                the sepulchre of St. Agatha in prayers, and weeping began to pray for her help and aid. St. Lucy in
+                making her prayers for her mother fell asleep, and she saw in her sleep St. Agatha among the angels,
+                nobly adorned and arrayed with precious stones, which said thus to her: Lucy, my sweet sister, devout
+                virgin to God, wherefore prayest thou to me for thy mother, for such thing as thou mayest thyself right
+                soon give to her? For I tell the for truth, that for thy faith, and thy good, thy mother is safe and
+                whole.
+
+                With these words St. Lucy awoke all afraid, and said to her mother: Mother, ye be guerished and all
+                whole; I pray you for her sake by whose prayers ye be healed, that ye never make mention to me for to
+                take an husband ne spouse, but all that good that ye would give me with a man, I pray you that ye will
+                give it to me for to do alms withal that I may come to my saviour Jesu Christ.
+
+                Her mother answered to her: Fair daughter, thy patrimony, which I have received this nine years, sith
+                thy father died, I have nothing aminished, but I have multiplied and increased it; but abide till I am
+                departed out of this world, and then forthon do as it shall please thee.
+            </p>
+            <h1>Mother and Daughter Sell Lucy's Patrimony for the Poor</h1>
+            <p>
+                St. Lucy said: Sweet mother, hear my counsel: he is not beloved of God, that for his love giveth that
+                which he may not use himself, but if thou wilt find God debonair to thee, give for him that which thou
+                mayest dispend, for after thy death thou mayest in no wise use thy goods. That which thou givest when
+                thou shalt die, thou givest it because thou mayest not bear it with thee. Give then for God's sake
+                whiles thou livest: and as to such good as thou oughtest to give to me with an husband or spouse, begin
+                to give all that to your people for the love of Jesu Christ.
+
+                Hereof spake alway Lucy to her mother, and every day they gave alms of their goods. And when they had
+                almost sold their patrimony and their jewels, tidings came to the knowledge of her spouse that should
+                have wedded her, and that she was promised to, the which he demanded hereof the truth of the nurse of
+                St. Lucy, and wherefore they sold thus their patrimony.
+
+                She answered cautelously, and said that they did it because that St. Lucy, which should have been his
+                wife, had found one which had a more fairer and nobler heritage than his was, the which they would buy
+                tofore ere they should assemble by marriage. The fool believed it, for he understood carnally this that
+                the nurse had said to him spiritually, and helped them to sell their heritage. But when he understood
+                that she gave all for God's love, and that he felt himself deceived, anon he complained on Lucy, and
+                made her to come tofore a judge named Paschasius, which was a miscreant and heathen man.
+            </p>
+            <h1>St. Lucy Before the Judge</h1>
+            <p>
+                And it was because she was Christian, and that she did against the law of the Emperor, Paschasius blamed
+                her, and admonested her to worship and do sacrifice to the idols. She said: Sacrifice which pleaseth God
+                is to visit the widows and orphans, and to help them in their need: I have not ceased these three years
+                past to make to God such sacrifice, and forasmuch as I have no more of which I may make yet such
+                sacrifice, I offer to him myself, let him do with his offering as it pleaseth him.
+
+                Paschasius said: Thou mightest say these words unto Christian people, semblable to thee, but to me which
+                keep the commandments of the emperors, thou sayest them in vain.
+
+                St. Lucy said: If thou wilt keep the law of thy lords, I shall keep the law of God; thou doubtest to
+                anger them, and I shall keep me that I anger not my God; thou wilt please them, and I covet only to
+                please our Lord Jesu Christ.
+
+                Paschasius said: Thou hast dispended thy patrimony with the ribalds, and therefore thou speakest as a
+                ribald.
+
+                She said. I have set my patrimony in a sure place; unto the corruption of my heart ne body, I never
+                agreed ne suffered it.
+
+                Paschasius said: Who be they that corrupt the heart and the body?
+
+                She said: Ye be that corrupt the hearts, of whom the apostle said, "The evil words corrupt the good
+                manners." Ye counsel the souls to forsake their creator and to ensue the devil in making sacrifice to
+                the idols; the corrupters of the body be they that love the short delectations corporal, and despite
+                delights spiritual that endure for ever.
+
+                Paschasius said: These words that thou sayest shall finish when thou shalt come to thy pains.
+
+                She said: The words of God may not end ne finish.
+
+                Paschasius said: How then! art thou God?
+
+                She said: I am the handmaid of God, and for so much as I say, they be the words of God, for he saith,
+                "Ye be not they that speak tofore the princes and judges, but the Holy Ghost speaketh in you."
+
+                Paschasius said: And therefore the Holy Ghost is in thee?
+
+                She said: The apostle saith that they be the temple of God that live chastely, and the Holy Ghost
+                dwelleth in them.
+
+                Paschasius said: I shall do bring thee to the bordel, where thou shalt lose thy chastity, and then the
+                Holy Ghost shall depart from thee.
+
+                She said: The body may take no corruption but if the heart and will give thereto assenting: for if thou
+                madest me to do sacrifice by my hands, by force, to the idols, against my will, God shall take it only
+                but as a derision, for he judgeth only of the will and consenting. And therefore, if thou make my body
+                to be defouled without mine assent, and against my will, my chastity shall increase double to the merit
+                of the crown of glory. What thing that thou dost to the body, which is in thy power, that beareth no
+                prejudice to the handmaid of Jesu Christ.
+            </p>
             <h1> Consigned to the Procurers of the Town, She Proves Immovable</h1>
             <p>
                 Then commanded Paschasius that the ribalds of the town should come, to whom he delivered St. Lucy,
@@ -36,10 +146,42 @@
                 thus? If thou hast proved and assayed that I am the temple of God, believe it. If thou hast not assayed,
                 learn to assay.
             </p>
+            <h1>She is Put in a Fire</h1>
+            <p>
+                And hereof was the judge more tormented, for he saw that she made but her mockery with him. Wherefore he
+                did do make about St. Lucy a right great fire, and made to be cast on her pitch, resin, and boiling oil,
+                and she abode all still tofore the fire, and said: I have prayed to Jesu Christ that this fire have no
+                domination in me to the end that the Christian men that believe in God make of thee their derision. And
+                I have prayed for respite of my martyrdom for to take away from the Christian men the fear and dread to
+                die for the faith of Jesu Christ, and to take away from the miscreants the avaunting of my martyrdom.
+            </p>
+            <h1>Stabbed in the Throat, She Prophesies to the People</h1>
+            <p>
+                The friends of the judge saw that he was confused by the words of St. Lucy, and of the drawing much
+                greatly tormented, and therefore they roof a sword through her throat, and yet for all that she died not
+                anon, but spake to the people, saying: I announce and show to you that holy church shall have peace, for
+                Diocletian the emperor, which was enemy to holy church is this day put out of his seignory, and
+                Maximian, his fellow, is this day dead. And in likewise as St. Agatha is patroness and keeper of
+                Catania, in the same wise shall I be committed to be patroness of Syracuse, this city.
+
+                And as she spake thus to the people, the sergeants and ministers of Rome came for to take Paschasius and
+                bring him to Rome, because he was accused tofore the senators of Rome of that he had robbed the
+                province; wherefore he received his sentence of the senate, and had his head smitten off.
+            </p>
+            <h1>Her Death</h1>
+            <p>
+                St. Lucy never removed from the place where she was hurt with the sword, ne died not till the priest
+                came and brought the blessed body of our Lord Jesu Christ. And as soon as she had received the blessed
+                sacrament she rendered and gave up her soul to God, thanking and praising him of all his goodness. In
+                that same place is a church edified in the name of her, whereas many benefits have been given to the
+                honour of our Lord Jesu Christ, which is blessed world without end. Amen.
+            </p>
+            <!-- This is a link to a placeholder. In this scenario, it returns to the top of the current page. -->
+            <a class="placeholder" href="#">RETURN TO TOP</a>
         </section>
     </main>
     <footer class="titleFoot">
-        &copy; Finnian Lucy 2025
+        &copy; FINNIAN LUCY 2025
     </footer>
 </body>
 
