--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <title>Saint Lucy</title>
     </head>
 
+    <nav id="nav_menu">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="./html/golden-legend.html">GOLDEN LEGEND</a></li>
+            <li><a href="./html/sacred-tradition.html">SACRED TRADITION</a></li>
+        </ul>
+    </nav>
+
     <body>
         <!-- While the header, main, and footer tags are only semantic, they aid greatly in readability. -->
         <header>
@@ -16,13 +24,12 @@
             <!-- It is a good idea to create seperate folders for images as the site scales. -->
             <img src="./images/saint-lucy.webp" alt="A blonde woman with a crown of burning candles.">
             <h1 id="titleMain">SAINT LUCY</h1>
-            <a href="index.html">HOME</a>
-            <a href="html/golden-legend.html">GOLDEN LEGEND</a>
         </header>
         <main>
-            <p>Saint Lucy's feast day is <a href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13" target="_blank">December 13.</a></p>
+            <!-- A blank target opens a link in a new tab. -->
+            <p>Saint Lucy's feast day is <a class="offsite" href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13" target="_blank">DECEMBER 13</a></p>
             <p>She is the patroness of many places including:</p>
-            <ul class="eye">
+            <ul class="custom_ul">
                 <li>Syracuse, Italy</li>
                 <li>Perugia, Italy</li>
                 <li>Mtarfa, Malta</li>
@@ -31,7 +38,7 @@
         </main>
         <footer class="titleFoot">
             <!-- The character entity, "&copy;", is a copyright symbol. -->
-            &copy; Finnian Lucy 2025
+            &copy; FINNIAN LUCY 2025
         </footer>
     </body>
 
