Module 7 - Create Your Own Website

--- a/html/golden-legend.html
+++ b/html/golden-legend.html
@@ -15,6 +15,7 @@
         <li><a href="../index.html">HOME</a></li>
         <li><a href="golden-legend.html">GOLDEN LEGEND</a></li>
         <li><a href="sacred-tradition.html">SACRED TRADITION</a></li>
+        <li><a href="liturgy.html">LITURGY</a></li>
     </ul>
 </nav>
 
