--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta description="Saint Lucy, a light to guide you home.">
         <link rel="stylesheet" href="./styles.css">
-        <title>Saint Lucy</title>
+        <title>SAINT LUCY</title>
     </head>
 
     <nav id="nav_menu">
@@ -14,6 +14,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="./html/golden-legend.html">GOLDEN LEGEND</a></li>
             <li><a href="./html/sacred-tradition.html">SACRED TRADITION</a></li>
+            <li><a href="./html/liturgy.html">LITURGY</a></li>
         </ul>
     </nav>
 
