Module 9 - Create Your Own Website

--- a/html/golden-legend.html
+++ b/html/golden-legend.html
@@ -7,6 +7,7 @@
     <meta description="Golden Legend">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../css/golden-legend.css">
+    <link rel="icon" type="image/x-icon" href="/images/stlucy.ico">
     <title>GOLDEN LEGEND</title>
 </head>
 
