Module 9 Extra Credit - favicon

--- a/html/liturgy.html
+++ b/html/liturgy.html
@@ -7,7 +7,7 @@
     <meta description="Liturgy">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../css/liturgy.css">
-    <link rel="icon" type="image/x-icon" href="/images/stlucy.ico">
+    <link rel="icon" type="image/x-icon" href="./images/stlucy.ico">
     <title>LITURGY</title>
 </head>
 
