--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta description="Saint Lucy, a light to guide you home.">
         <link rel="stylesheet" href="./styles.css">
-        <link rel="icon" type="image/x-icon" href="/images/stlucy.ico">
+        <link rel="icon" type="image/x-icon" href="./images/stlucy.ico">
         <title>SAINT LUCY</title>
     </head>
 
