--- a/html/liturgy.html
+++ b/html/liturgy.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- Module 9 - fontawesome -->
+    <script src="https://kit.fontawesome.com/c639a33a41.js" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="Liturgy">
@@ -13,7 +16,9 @@
 
 <nav id="nav_menu">
     <ul>
-        <li><a href="../index.html">HOME</a></li>
+        <!-- Module 9 - fontawesome -->
+        <li><a href="../index.html"><i class="fa-solid fa-house" style="color: #ffffff;"></i></a></li>
+        
         <li><a href="golden-legend.html">GOLDEN LEGEND</a></li>
         <li><a href="sacred-tradition.html">SACRED TRADITION</a></li>
         <li><a href="liturgy.html">LITURGY</a></li>
