Module 9 - Google Fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <!-- Module 9 - fontawesome -->
         <script src="https://kit.fontawesome.com/c639a33a41.js" crossorigin="anonymous"></script>
 
+        <!-- Module 9 - Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta description="Saint Lucy, a light to guide you home.">
@@ -17,7 +22,7 @@
         <ul>
             <!-- Module 9 - fontawesome -->
             <li><a href="index.html"><i class="fa-solid fa-house" style="color: #ffffff;"></i></a></li>
-            
+
             <li><a href="./html/golden-legend.html">GOLDEN LEGEND</a></li>
             <li><a href="./html/sacred-tradition.html">SACRED TRADITION</a></li>
             <li><a href="./html/liturgy.html">LITURGY</a></li>
