Module 10 - Lucy Jane Duersch

--- a/html/golden-legend.html
+++ b/html/golden-legend.html
@@ -22,6 +22,7 @@
         <li><a href="golden-legend.html">GOLDEN LEGEND</a></li>
         <li><a href="sacred-tradition.html">SACRED TRADITION</a></li>
         <li><a href="liturgy.html">LITURGY</a></li>
+        <li><a href="tribute.html">TRIBUTE</a></li>
     </ul>
 </nav>
 
