--- a/html/liturgy.html
+++ b/html/liturgy.html
@@ -22,6 +22,7 @@
         <li><a href="golden-legend.html">GOLDEN LEGEND</a></li>
         <li><a href="sacred-tradition.html">SACRED TRADITION</a></li>
         <li><a href="liturgy.html">LITURGY</a></li>
+        <li><a href="tribute.html">TRIBUTE</a></li>
     </ul>
 </nav>
 
@@ -34,7 +35,7 @@
         </section>
         <section id="liturgyTitle2">
             <p>THANKSGIVING</p>
-            <img src="../images/liturgy2.png" alt="Saint Lucy stained glass">
+            <img src="../images/liturgy4.png" alt="Saint Lucy stained glass">
             <p>PSALMS 31</p>
         </section>
         <section id="liturgyTitle3">
