--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="./html/golden-legend.html">GOLDEN LEGEND</a></li>
             <li><a href="./html/sacred-tradition.html">SACRED TRADITION</a></li>
             <li><a href="./html/liturgy.html">LITURGY</a></li>
+            <li><a href="./html/tribute.html">TRIBUTE</a></li>
         </ul>
     </nav>
 
