Final Project Submission

--- a/index.html
+++ b/index.html
@@ -42,12 +42,26 @@
             <!-- A blank target opens a link in a new tab. -->
             <p>Saint Lucy's feast day is <a class="offsite" href="https://web.archive.org/web/20241202070940/https://www.catholicculture.org/culture/liturgicalyear/calendar/day.cfm?date=2024-12-13" target="_blank">DECEMBER 13</a></p>
             <p>She is the patroness of many places including:</p>
-            <ul class="custom_ul">
-                <li>Syracuse, Italy</li>
-                <li>Perugia, Italy</li>
-                <li>Mtarfa, Malta</li>
-                <li>Sasmuan, Phillipines</li>
-            </ul>
+            <div class="flex-container">
+                <ul class="custom_ul">
+                    <li>Syracuse, Italy</li>
+                    <div class="box">
+                        <img src="../images/patroness1.webp" alt="The tomb of Saint Lucy in Syracuse.">
+                    </div>
+                    <li>Perugia, Italy</li>
+                    <div class="box">
+                        <img src="../images/patroness2.webp" alt="Chapel in Perugia.">
+                    </div>
+                    <li>Mtarfa, Malta</li>
+                    <div class="box">
+                        <img src="../images/patroness3.webp" alt="Chapel in Mtarfa.">
+                    </div>
+                    <li>Sasmuan, Phillipines</li>
+                    <div class="box">
+                        <img src="../images/patroness4.webp" alt="Chapel in Sasmuan.">
+                    </div>
+                </ul>
+            </div>
         </main>
         <footer class="titleFoot">
             <!-- The character entity, "&copy;", is a copyright symbol. -->
