--- a/html/sacred-tradition.html
+++ b/html/sacred-tradition.html
@@ -34,7 +34,17 @@
         <p>
             While not recorded in her official biography, the sacred tradition passed down is that Saint Lucy brought consolation and aid to Catholics hiding in the catacombs during the persecutions of the Roman government. In order to see in the darkness, Saint Lucy placed a crown with candles on her head. One of the Catholic traditions that has survived the ages of schism and conflict is the selection of a girl on Saint Lucy's feast day to walk in procession with a crown of candles- to commemorate her life and because its the cutest thing in the whole world. Works cited:
         </p>
-        <img src="../images/sacred-tradition.webp" alt="Cute girl with candle crown.">
+        <div class="flex-container">
+            <div class="box">
+                <img src="../images/sacred-tradition1.webp" alt="Cute girl with candle crown.">
+            </div>
+            <div class="box">
+                <img src="../images/sacred-tradition2.webp" alt="Another girl with a candle crown.">
+            </div>
+            <div class="box">
+                <img src="../images/sacred-tradition3.webp" alt="A third example of a girl representing Saint Lucy.">
+            </div>
+        </div>
     </main>
     <footer class="titleFoot">
         &copy; FINNIAN LUCY 2025
