Final Project Submission V2

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 <ul class="custom_ul">
                     <li>Syracuse, Italy</li>
                     <div class="box">
-                        <img src="../images/patroness1.webp" alt="The tomb of Saint Lucy in Syracuse.">
+                        <img src="./images/patroness1.webp" alt="The tomb of Saint Lucy in Syracuse.">
                     </div>
                     <li>Perugia, Italy</li>
                     <div class="box">
-                        <img src="../images/patroness2.webp" alt="Chapel in Perugia.">
+                        <img src="./images/patroness2.webp" alt="Chapel in Perugia.">
                     </div>
                     <li>Mtarfa, Malta</li>
                     <div class="box">
-                        <img src="../images/patroness3.webp" alt="Chapel in Mtarfa.">
+                        <img src="./images/patroness3.webp" alt="Chapel in Mtarfa.">
                     </div>
                     <li>Sasmuan, Phillipines</li>
                     <div class="box">
-                        <img src="../images/patroness4.webp" alt="Chapel in Sasmuan.">
+                        <img src="./images/patroness4.webp" alt="Chapel in Sasmuan.">
                     </div>
                 </ul>
             </div>
